# sync-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  main.rs.c6a  main.rs.c6b  main.rs.c6c  main.rs.c6d  main.rs.c6e  main.rs.c6f
